# nautilus-futu

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TASKS.md  pyproject.toml  requirements-dev.txt  test_connect.py  test_live.py
.github/workflows/: ci.yml  release.yml
crates/futu/: Cargo.toml  build.rs
crates/futu/src/: config.rs  lib.rs
crates/futu/src/client/: connection.rs  dispatcher.rs  init.rs  keepalive.rs  mod.rs
crates/futu/src/protocol/: codec.rs  encryption.rs  header.rs  mod.rs
crates/futu/src/python/: client.rs  mod.rs  push_decode.rs
crates/futu/src/quote/: history.rs  mod.rs  snapshot.rs  subscribe.rs
crates/futu/src/trade/: account.rs  mod.rs  order.rs  push.rs  query.rs
examples/: full_example.py  live_market_data.py
nautilus_futu/: __init__.py  common.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py
nautilus_futu/parsing/: __init__.py  instruments.py  market_data.py  orders.py
tests/integration/: test_connect.py
tests/python/: conftest.py  test_common.py  test_config.py  test_constants.py  test_data_client.py  test_execution.py  test_infrastructure.py  test_instruments.py  test_market_data.py  test_parsing.py  test_push.py
