[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-futu"
version = "0.1.0"
description = "Futu OpenD adapter for NautilusTrader"
requires-python = ">=3.10"
dependencies = [
    "nautilus_trader>=1.200",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/futu/Cargo.toml"
module-name = "nautilus_futu._rust"
