[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-futu"
version = "0.3.2"
description = "Futu OpenD adapter for NautilusTrader"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    {name = "loadstarCN"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "nautilus_trader>=1.221",
]

[project.urls]
Repository = "https://github.com/loadstarCN/nautilus-futu"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/futu/Cargo.toml"
module-name = "nautilus_futu._rust"
